<resources>
    <string name="app_name">DesarrolloInterfaces</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="nacimiento">Fecha nacimiento</string>
    <string name="correo">Correo electronico</string>
    <string name="terminos">Acepto los términos y condiciones</string>
    <string name="publicidad">Acepto recibir correos publicitarios</string>
    <string name="registrar">Registrarse</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="otros">Otros</string>
    <string name="sexo">SEXO</string>
    <string name="informacion">INFORMACIÓN</string>
    <string name="opciones">OPCIONES</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="acciones">ACCIONES</string>
</resources>